# imap_mailbox

./: Makefile  README.md  conftest.py  imap_mailbox.py  imapbox.py  mailbox.py  pyproject.toml  test_mailbox.py
.github/workflows/: docs.yml
imap_mailbox/: __init__.py
scripts/: init-dev.sh  pre-commit  pre-push
test_mailbox/: test_client_list_folders.yml
tests/: conftest.py  test_imap_mailbox.py
