[tool.poetry]
name = "mail_bot"
version = "0.1.0"
description = ""
authors = ["Pedro Rodrigues <medecau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
IMAPClient = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
pytest-regressions = "^2.3.1"
hypothesis = "^6.47.3"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
